--- a/src/app/Header/header.component.html
+++ b/src/app/Header/header.component.html
@@ -1,8 +1,7 @@
-<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>App Component Works</h1>
+      <h1>Header Component Works</h1>
     </div>
   </div>
 </div>
