--- a/src/app/Shopping List/shopping-list/shopping-list.component.html
+++ b/src/app/Shopping List/shopping-list/shopping-list.component.html
@@ -1,1 +1,7 @@
-<p>shopping-list works!</p>
+<div class="row">
+  <div class="col-xs-10">
+    <app-edit-shoppinglist></app-edit-shoppinglist>
+    <hr />
+    <p>The List</p>
+  </div>
+</div>
