--- a/src/app/Shopping List/shopping-list/shopping-list.component.html
+++ b/src/app/Shopping List/shopping-list/shopping-list.component.html
@@ -2,6 +2,14 @@
   <div class="col-xs-10">
     <app-edit-shoppinglist></app-edit-shoppinglist>
     <hr />
-    <p>The List</p>
+    <ul>
+      <li
+        class="list-group-item"
+        style="cursor: pointer"
+        *ngFor="let ingredient of ingredients"
+      >
+        {{ ingredient.name }} ({{ ingredient.amount }})
+      </li>
+    </ul>
   </div>
 </div>
