--- a/src/app/Shopping List/shopping-list/shopping-list.component.html
+++ b/src/app/Shopping List/shopping-list/shopping-list.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-10">
     <app-edit-shoppinglist></app-edit-shoppinglist>
     <hr />
-    <ul>
+    <ul class="list-group">
       <li
         class="list-group-item"
         style="cursor: pointer"
